WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281158
Unreviewed, not applying core number adjustment for x64
https://bugs.webkit.org/show_bug.cgi?id=281158
Summary
Unreviewed, not applying core number adjustment for x64
Yusuke Suzuki
Reported
2024-10-09 12:44:15 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2024-10-09 12:44:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34922
Radar WebKit Bug Importer
Comment 2
2024-10-09 12:47:27 PDT
<
rdar://problem/137617779
>
EWS
Comment 3
2024-10-09 12:50:21 PDT
Committed
284913@main
(6c5f37f25e18): <
https://commits.webkit.org/284913@main
> Reviewed commits have been landed. Closing PR #34922 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug