Unreviewed, not applying core number adjustment for x64 https://bugs.webkit.org/show_bug.cgi?id=281158 <rdar://problem/137617779>

Not doing this as we are not validating them yet for x64.

* Source/JavaScriptCore/runtime/Options.cpp:
(JSC::overrideDefaults):

Canonical link: https://commits.webkit.org/284913@main